implemented email notification about scheduled training for client

--- a/gymSoftware/pom.xml
+++ b/gymSoftware/pom.xml
@@ -89,6 +89,12 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- velocity implementation -->
+		<dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity</artifactId>
+			<version>1.7</version>
+		</dependency>
 	</dependencies>
 
 	<build>
