--- a/gymSoftware/src/main/resources/application.properties
+++ b/gymSoftware/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.hibernate.ddl-auto=create
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-server.port=8080
+server.port=8084
 spring.devtools.restart.enabled = false
 #server.ssl.keyStoreType: JKS
 #server.ssl.key-alias=svetozar
@@ -19,3 +19,25 @@ spring.datasource.url=jdbc:mysql://127.0.0.1/twiggygymsoftware?serverTimezone=UT
 spring.datasource.username=root
 spring.datasource.password=root
 spring.session.jdbc.initialize-schema: always
+
+#spring.mail.host = 127.0.0.1
+#spring.mail.port = 25
+
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=elenakrunic@gmail.com
+#spring.mail.password=Bijelazavjesaa 
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=krunicele@gmail.com
+spring.mail.password=wetrovi691!
+spring.mail.transport.protocol=smtp
+spring.mail.smtp.auth=true
+spring.mail.from.email=krunicele@gmail.com
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+#smtp.STARTTLS.enable=true
+#smtp.starttls.enable=true
