--- a/gymSoftware/bin/src/main/resources/application.properties
+++ b/gymSoftware/bin/src/main/resources/application.properties
@@ -1,1 +1,43 @@
+spring.profiles.active=dev
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.platform=mysql
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.initialization-mode=always
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+server.port=8084
+spring.devtools.restart.enabled = false
+#server.ssl.keyStoreType: JKS
+#server.ssl.key-alias=svetozar
+#server.ssl.key-store= C:\\Users\\Svetozar\\git\\InformationSecurityProject_FTN_2021\\Desktop\\IB\\security\\src\\main\\resources\\cert\\ib-keyst.jks
+#server.ssl.key-store=C:\\Users\\lenovo\\Desktop\\IB\\InformationSecurityProject_FTN_2021\\Desktop\\IB\\security\\src\\main\\resources\\cert\\ib-keyst.jks
+#server.ssl.key-store-password= 123456
 
+spring.datasource.url=jdbc:mysql://127.0.0.1/twiggygymsoftware?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.session.jdbc.initialize-schema: always
+
+#spring.mail.host = 127.0.0.1
+#spring.mail.port = 25
+
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=elenakrunic@gmail.com
+#spring.mail.password=Bijelazavjesaa 
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=krunicele@gmail.com
+spring.mail.password=wetrovi691!
+spring.mail.transport.protocol=smtp
+spring.mail.smtp.auth=true
+spring.mail.from.email=krunicele@gmail.com
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+#smtp.STARTTLS.enable=true
+#smtp.starttls.enable=true
